Fix scrollbar issue on data tables

--- a/apps/dashr-medical-provider-charges/assets/clinical-analytics.css
+++ b/apps/dashr-medical-provider-charges/assets/clinical-analytics.css
@@ -126,7 +126,8 @@ span.Select-clear-zone {
 }
 
 #cost-stats-table, #procedure-stats-table {
-    overflow: scroll;
+    overflow: auto;
+    /*overflow: scroll;*/
 }
 
 .section-title {
